# VFaka

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.postgres.yml  docker-compose.yml
config/tokenpay/: appsettings.json.example
crates/aff-api/: Cargo.toml
crates/aff-api/src/middleware/: auth.rs
crates/aff-api/src/routes/: mod.rs
crates/aff-api/src/routes/admin/: admin_mgmt.rs  aff.rs  auth.rs  card.rs  category.rs  coupon.rs  dashboard.rs  mod.rs  order.rs  payment.rs  product.rs  settings.rs  upload.rs  variant.rs  withdrawal.rs
crates/aff-api/src/routes/public/: aff.rs  announcement.rs  callback.rs  coupon.rs  mod.rs  order.rs  product.rs
crates/aff-common/: Cargo.toml
crates/aff-common/src/: config.rs  error.rs  id_gen.rs  lib.rs  types.rs
crates/aff-common/src/crypto/: md5_sign.rs  mod.rs  rsa_sign.rs
crates/aff-core/: Cargo.toml
crates/aff-core/src/: lib.rs
crates/aff-core/src/services/: admin_service.rs  aff_service.rs  card_service.rs  category_service.rs  coupon_service.rs  mod.rs  order_service.rs  payment_config_service.rs  post_action.rs  product_service.rs  settings_service.rs  variant_service.rs  withdraw_service.rs  withdrawal_service.rs
crates/aff-core/src/tasks/: mod.rs  order_timeout.rs
crates/aff-entity/: Cargo.toml
crates/aff-entity/src/: lib.rs
crates/aff-entity/src/dto/: admin_dto.rs  aff_dto.rs  coupon_dto.rs  mod.rs  order_dto.rs  product_dto.rs  variant_dto.rs
crates/aff-entity/src/entities/: admin.rs  aff_log.rs  aff_tier.rs  aff_user.rs  card.rs  category.rs  coupon.rs  mod.rs  order.rs  payment_config.rs  product.rs  product_variant.rs  system_setting.rs  withdrawal.rs
crates/aff-entity/src/migration/: m20260406_000001_init.rs  m20260406_000002_aff_tiers.rs  m20260406_000003_media_and_notify.rs  m20260406_000004_coupons.rs  m20260406_000005_security_hardening.rs  m20260411_000006_product_variants.rs  m20260416_000007_product_delivery_mode.rs  mod.rs
crates/aff-notify/: Cargo.toml
crates/aff-notify/src/: email.rs  lib.rs  telegram.rs
crates/aff-payment/: Cargo.toml
crates/aff-payment/src/: factory.rs  lib.rs  provider.rs
crates/aff-payment/src/epay/: mod.rs
crates/aff-payment/src/tokenpay/: mod.rs
crates/aff-server/: Cargo.toml
crates/aff-server/src/: main.rs
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: admin.ts  public.ts  request.ts
frontend/src/components/common/: ConfirmModal.vue
frontend/src/composables/: useAffCode.ts  useConfirm.ts  useSiteInfo.ts  useTheme.ts
frontend/src/locales/: en.json  zh-CN.json  zh-TW.json
frontend/src/router/: index.ts
frontend/src/stores/: admin.ts
frontend/src/views/admin/: Admins.vue  AffManage.vue  Cards.vue  Categories.vue  Coupons.vue  Dashboard.vue  Layout.vue  Login.vue  Orders.vue  PaymentConfig.vue  Products.vue  Settings.vue  Withdrawals.vue
frontend/src/views/public/: Aff.vue  Home.vue  OrderQuery.vue
