[package]
name = "aff-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aff-common = { path = "../aff-common" }
aff-entity = { path = "../aff-entity" }
aff-core = { path = "../aff-core" }
aff-payment = { path = "../aff-payment" }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-files = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
