[package]
name = "aff-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
md-5 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
pkcs8 = { workspace = true }
tracing = { workspace = true }
actix-web = { workspace = true }
