[package]
name = "aff-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
sqlite = ["aff-entity/sqlite"]
postgres = ["aff-entity/postgres"]

[dependencies]
aff-common = { path = "../aff-common" }
aff-entity = { path = "../aff-entity", default-features = false }
aff-payment = { path = "../aff-payment" }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bcrypt = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
jsonwebtoken = { workspace = true }
