[package]
name = "aff-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aff-server"
path = "src/main.rs"

[features]
default = ["sqlite"]
sqlite = ["aff-entity/sqlite", "aff-core/sqlite", "aff-api/sqlite", "sea-orm/sqlx-sqlite", "sea-orm-migration/sqlx-sqlite"]
postgres = ["aff-entity/postgres", "aff-core/postgres", "aff-api/postgres", "sea-orm/sqlx-postgres", "sea-orm-migration/sqlx-postgres"]

[dependencies]
aff-common = { path = "../aff-common" }
aff-entity = { path = "../aff-entity", default-features = false }
aff-core = { path = "../aff-core", default-features = false }
aff-api = { path = "../aff-api", default-features = false }
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
tokio = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
actix-files = "0.6"
